Bug 479771 - Ok button is not enabled in filter dialog
Summary: Ok button is not enabled in filter dialog
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.5.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-13 22:03 UTC by Robby Stephenson
Modified: 2024-01-16 13:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.5.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2024-01-13 22:03:50 UTC
I bring up the filter dialogue and select "Box" and "equals" - I wanted
to find any entries that haven't been assigned a box number. So I leave
the value field empty. Problem is that the "OK" and "Apply" buttons are
not active.

https://mail.kde.org/pipermail/tellico-users/2024-January/001867.html
Comment 1 Robby Stephenson 2024-01-13 22:08:35 UTC
Git commit b34c1a7872e28229030da5e1fe724a582d701fcd by Robby Stephenson.
Committed on 13/01/2024 at 23:08.
Pushed by rstephenson into branch '3.5'.

Change the filter rule widget before emitting modified signal

The dialog buttons were not enabled after the rule functions were
changed.
FIXED-IN: 3.5.4

M  +4    -0    ChangeLog
M  +0    -4    src/filterdialog.cpp
M  +3    -3    src/gui/filterrulewidget.cpp

https://invent.kde.org/office/tellico/-/commit/b34c1a7872e28229030da5e1fe724a582d701fcd
Comment 2 Robby Stephenson 2024-01-16 13:19:09 UTC
Git commit 963971bbb2486de7f9790d9886af96f87bb779f7 by Robby Stephenson.
Committed on 16/01/2024 at 14:19.
Pushed by rstephenson into branch 'master'.

Change the filter rule widget before emitting modified signal

The dialog buttons were not enabled after the rule functions were
changed.
FIXED-IN: 3.5.4

M  +1    -0    ChangeLog
M  +0    -4    src/filterdialog.cpp
M  +3    -3    src/gui/filterrulewidget.cpp

https://invent.kde.org/office/tellico/-/commit/963971bbb2486de7f9790d9886af96f87bb779f7