Change the filter rule widget before emitting modified signal

The dialog buttons were not enabled after the rule functions were
changed.

BUG: 479771
FIXED-IN: 3.5.4